--- a/opcion1/opcion1.html
+++ b/opcion1/opcion1.html
@@ -10,12 +10,16 @@
 </head>
 <body>
     <div class="container ">
-        <div class="row">
-            <div class="menu-desplegable">
-                <ul>
-                    <li>menú</li>
-                    <li>algo</li>
-                    <li>otro algo</li>
+        <div class="row justify-content-end" >
+            <div class="col-11 text-end menu-desplegable" id="menu">
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x " viewBox="0 0 16 16">
+                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                  </svg>
+                <ul class="text-start">
+                    <li class="mt-3">menú</li>
+                    <li class="mt-3">algo</li>
+                    <li class="mt-3">otro algo</li>
+                    <li class="mt-3">algunas cosas más</li>
                 </ul>
             </div>
             <h1>opcion 1</h1>
