--- a/opcion1/opcion1.html
+++ b/opcion1/opcion1.html
@@ -6,15 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/opcion1.css">
+    <link rel="stylesheet" href="./css/hamburguer.css">
     <title>Opcion 1</title>
 </head>
 <body>
     <div class="container ">
         <div class="row justify-content-end" >
-            <div class="col-11 text-end menu-desplegable" id="menu">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x " viewBox="0 0 16 16">
+            <div class="contenedorMenuHamburguesa mt-2">
+             <span id="barra1" class="barraHamburguesa"></span>
+             <span id="barra2" class="barraHamburguesa"></span>
+             <span id="barra3" class="barraHamburguesa"></span>
+            </div>
+            <div class="col-11 text-end menu-desplegable " id="menu">
+               
+
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-x " viewBox="0 0 16 16">
                     <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
-                  </svg>
+                  </svg> -->
                 <ul class="text-start">
                     <li class="mt-3">menú</li>
                     <li class="mt-3">algo</li>
