--- a/opcion2/opcion2.html
+++ b/opcion2/opcion2.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/opcion2.css">
     <link rel="stylesheet" href="./css/hamburguer.css">
-    <title>Opcion 1</title>
+    <title>Opción 2</title>
 </head>
 <body>
     <div class="container ">
@@ -25,7 +25,7 @@
                     <li class="mt-3">algunas cosas más</li>
                 </ul>
             </div>
-            <h1>opcion 1</h1>
+            <h1>opción 2</h1>
             <a href="../index.html">Volver al menú de opciones  </a>
         </div>
 
